deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: model

  replicas: 1
  
  template:
    metadata:
      labels:
        name: model

    spec:
      containers:
      - image: gcr.io/PROJECT_ID/IMAGE:TAG
        name: model
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "2000Mi"
          requests:
            memory: "2000Mi"
