deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service 
  namespace: default
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000 
  selector:
    name: model
