deployment/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "model-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "model-service"
    servicePort: 5000
